--- a/MiraAPI/MiraAPI.csproj
+++ b/MiraAPI/MiraAPI.csproj
@@ -16,11 +16,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <EmbeddedResource Include="Resources\Cog.png" />
-      <EmbeddedResource Include="Resources\CogActive.png" />
-      <EmbeddedResource Include="Resources\FortniteBanner.jpeg" />
-      <EmbeddedResource Include="Resources\NextButton.png" />
-      <EmbeddedResource Include="Resources\NextButtonActive.png" />
+        <EmbeddedResource Include="Resources\Cog.png" />
+        <EmbeddedResource Include="Resources\CogActive.png" />
+        <EmbeddedResource Include="Resources\FortniteBanner.jpeg" />
+        <EmbeddedResource Include="Resources\NextButton.png" />
+        <EmbeddedResource Include="Resources\NextButtonActive.png" />
+        <EmbeddedResource Include="Resources\ExampleButton.png" />
     </ItemGroup>
 	
     <ItemGroup>
@@ -31,7 +32,7 @@
 
         <PackageReference Include="BepInEx.AutoPlugin" Version="1.1.0" PrivateAssets="all" />
         <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.1.0-rc.1" PrivateAssets="all" ExcludeAssets="runtime">
-          <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
     </ItemGroup>
 
