--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,5 +22,5 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          name: LaunchpadReloaded.dll
-          path: LaunchpadReloaded/bin/Release/net6.0/LaunchpadReloaded.dll
+          name: MiraAPI.dll
+          path: MiraAPI/bin/Release/net6.0/MiraAPI.dll
