--- a/MiraAPI/MiraAPI.csproj
+++ b/MiraAPI/MiraAPI.csproj
@@ -1,15 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
         <LangVersion>latest</LangVersion>
-        <DebugType>embedded</DebugType>
-        <PackageId>AllOfUs.MiraAPI</PackageId>
-        <Version>0.1.2</Version>
         <Description>Simple and easy to use Among Us modding API.</Description>
-        <Authors>Angxl, XtraCube</Authors>
-        <Company>All Of Us</Company>
-        <PackageLicenseExpression>LGPL-2.1-or-later</PackageLicenseExpression>
-        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageId>AllOfUs.MiraAPI</PackageId>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
     
     <ItemGroup>
@@ -17,27 +12,9 @@
     </ItemGroup>
     
     <ItemGroup>
-        <EmbeddedResource Include="Resources\Checkmark.png" />
-        <EmbeddedResource Include="Resources\CheckMarkBox.png" />
-        <EmbeddedResource Include="Resources\Cog.png" />
-        <EmbeddedResource Include="Resources\CogActive.png" />
-        <EmbeddedResource Include="Resources\NextButton.png" />
-        <EmbeddedResource Include="Resources\NextButtonActive.png" />
-        <EmbeddedResource Include="Resources\Empty.png" />
-    </ItemGroup>
-	
-    <ItemGroup>
-        <PackageReference Include="Reactor" Version="2.3.1" />
-        <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.697" Private="false" ExcludeAssets="runtime;native" />
-        <PackageReference Include="AmongUs.GameLibs.Steam" Version="2024.8.13" PrivateAssets="all" />
-
-        <PackageReference Include="BepInEx.AutoPlugin" Version="1.1.0" PrivateAssets="all" />
-        <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.1.0-rc.1" PrivateAssets="all" ExcludeAssets="runtime">
-            <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+        <EmbeddedResource Include="Resources\**\*.*" />
     </ItemGroup>
 
-    <Target Name="Copy" AfterTargets="Build" Condition="'$(AmongUs)' != ''">
-        <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(AmongUs)/BepInEx/plugins/" />
-    </Target>
+    <Import Project="../AmongUs.props" />   
+    
 </Project>
